refactored the class, but need to be tested in depth