@@ -1,26 +1,13 @@
 package ch.usi.dag.disl.classparser;
 
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.lang.classfile.*;
+import java.lang.classfile.instruction.*;
+import java.lang.constant.ClassDesc;
+import java.lang.reflect.AccessFlag;
+import java.util.*;
 
-import org.objectweb.asm.Opcodes;
-import org.objectweb.asm.Type;
-import org.objectweb.asm.tree.AbstractInsnNode;
-import org.objectweb.asm.tree.AnnotationNode;
-import org.objectweb.asm.tree.ClassNode;
-import org.objectweb.asm.tree.FieldInsnNode;
-import org.objectweb.asm.tree.FieldNode;
-import org.objectweb.asm.tree.InsnList;
-import org.objectweb.asm.tree.IntInsnNode;
-import org.objectweb.asm.tree.LabelNode;
-import org.objectweb.asm.tree.LdcInsnNode;
-import org.objectweb.asm.tree.MethodNode;
-import org.objectweb.asm.tree.VarInsnNode;
-import org.objectweb.asm.tree.analysis.Frame;
-import org.objectweb.asm.tree.analysis.SourceValue;
+import ch.usi.dag.disl.util.*;
+
 
 import ch.usi.dag.disl.InitializationException;
 import ch.usi.dag.disl.annotation.SyntheticLocal;
@@ -31,13 +18,6 @@ import ch.usi.dag.disl.exception.ReflectionException;
 import ch.usi.dag.disl.localvar.LocalVars;
 import ch.usi.dag.disl.localvar.SyntheticLocalVar;
 import ch.usi.dag.disl.localvar.ThreadLocalVar;
-import ch.usi.dag.disl.util.AsmHelper;
-import ch.usi.dag.disl.util.AsmHelper.Insns;
-import ch.usi.dag.disl.util.FrameHelper;
-import ch.usi.dag.disl.util.Insn;
-import ch.usi.dag.disl.util.JavaNames;
-import ch.usi.dag.disl.util.Logging;
-import ch.usi.dag.disl.util.ReflectionHelper;
 import ch.usi.dag.util.logging.Logger;
 
 /**
@@ -60,83 +40,66 @@ abstract class AbstractParser {
     // Local Variables Parsing and Processing
     // ****************************************
 
-    // returns local vars defined in this class
-    protected void processLocalVars (
-        final ClassNode dislClass
-    ) throws ParserException {
+    protected void processLocalVars(final ClassModel dislClass) throws ParserException {
         // parse local variables
-        final LocalVars localVars = parseLocalVars(dislClass.name, dislClass.fields);
+        final LocalVars localVars = parseLocalVars(dislClass.thisClass().name().stringValue(), dislClass.fields());
 
         // add local vars from this class to all local vars from all classes
         allLocalVars.putAll(localVars);
 
-        // get static initialization code
-        MethodNode cinit = null;
-        for (final MethodNode method : dislClass.methods) {
+        MethodModel cinit = null;
 
-            // get the code
-            if (JavaNames.isInitializerName (method.name)) {
+        for (final MethodModel method: dislClass.methods()) {
+            if (JavaNames.isInitializerName(method.methodName().stringValue())) {
                 cinit = method;
                 break;
             }
         }
 
         // parse init code for local vars and assigns them accordingly
-        if (cinit != null && cinit.instructions != null) {
-            parseInitCodeForSLV (cinit.instructions, localVars.getSyntheticLocals ());
-            parseInitCodeForTLV (dislClass.name, cinit, localVars.getThreadLocals ());
+        if (cinit != null && cinit.code().isPresent()) {
+            List<CodeElement> instructions = cinit.code().get().elementList();
+            parseInitCodeForSLV (instructions, localVars.getSyntheticLocals ());
+            parseInitCodeForTLV (dislClass.thisClass().name().stringValue(), cinit, localVars.getThreadLocals ());
         }
     }
 
 
-    private LocalVars parseLocalVars (
-        final String className, final List <FieldNode> fields
-    ) throws ParserException {
+    private LocalVars parseLocalVars(final String className, List<FieldModel> fields) throws ParserException {
         // NOTE: if two synthetic local vars with the same name are defined
         // in different files they will be prefixed with class name as it is
         // also in byte code
+        final LocalVars localVars = new LocalVars();
+        for (FieldModel field: fields) {
 
-        final LocalVars result = new LocalVars();
-
-        for (final FieldNode field : fields) {
-
-            if (field.invisibleAnnotations == null) {
-                // Ignore fields without annotations.
+            List<Annotation> annotations = ClassFileHelper.getFieldInvisibleAnnotations(field);
+            if (annotations.isEmpty()) {
                 continue;
             }
-
-            if (field.invisibleAnnotations.size() > 1) {
+            if (annotations.size() > 1) {
                 throw new ParserException("Field " + className + "."
-                        + field.name + " may have only one anotation");
+                        + field.fieldName().stringValue() + " may have only one anotation");
             }
-
-            final AnnotationNode annotation =
-                field.invisibleAnnotations.get(0);
-
-            final Type annotationType = Type.getType (annotation.desc);
-
-            // thread local
-            final Type tlvAnnotation = Type.getType(
-                    ch.usi.dag.disl.annotation.ThreadLocal.class);
-            if (annotationType.equals(tlvAnnotation)) {
-                final ThreadLocalVar tlv = parseThreadLocal (className, field, annotation);
-                result.put(tlv);
+            final Annotation annotation = annotations.getFirst();
+            final ClassDesc annotationDesc = annotation.classSymbol();
+            final ClassDesc threadLocalAnnotationDesc = ClassDesc.ofDescriptor(ch.usi.dag.disl.annotation.ThreadLocal.class.descriptorString());
+            if (annotationDesc.equals(threadLocalAnnotationDesc)) {
+                final ThreadLocalVar tlv = parseThreadLocal(className, field, annotation);
+                localVars.put(tlv);
                 continue;
             }
 
-            // synthetic local
-            final Type slvAnnotation = Type.getType(SyntheticLocal.class);
-            if (annotationType.equals(slvAnnotation)) {
+            final ClassDesc syntheticLocalDesc = ClassDesc.ofDescriptor(SyntheticLocal.class.descriptorString());
+            if (annotationDesc.equals(syntheticLocalDesc)) {
                 final SyntheticLocalVar slv = parseSyntheticLocal(className, field, annotation);
-                result.put(slv);
+                localVars.put(slv);
                 continue;
             }
-
             throw new ParserException("Field " + className + "."
-                    + field.name + " has unsupported DiSL annotation");
+                    + field.fieldName().stringValue() + " has unsupported DiSL annotation");
         }
 
-        return result;
+        return localVars;
     }
 
 
@@ -148,67 +111,45 @@ abstract class AbstractParser {
     }
 
 
-    private ThreadLocalVar parseThreadLocal (
-        final String className, final FieldNode field,
-        final AnnotationNode annotation
-    ) throws ParserException {
-        //
+    private ThreadLocalVar parseThreadLocal(final String className, final FieldModel field, final Annotation annotation) throws ParserException {
         // Ensure that the thread local field is declared static
         // and parse the annotation data.
-        //
-        if ((field.access & Opcodes.ACC_STATIC) == 0) {
-            throw new ParserException("Field " + className + "." + field.name
+        if (!field.flags().has(AccessFlag.STATIC)) {
+            throw new ParserException("Field " + className + "." + field.fieldName().stringValue()
                     + " declared as ThreadLocal but is not static");
         }
 
-        final TLAnnotationData tlad = parseAnnotation (
-            annotation, new TLAnnotationData ()
-        );
+        final TLAnnotationData tlAnnotationData = parseAnnotation(annotation, new TLAnnotationData());
 
-        return new ThreadLocalVar (
-            className, field.name, Type.getType (field.desc), tlad.inheritable
-        );
+        return new ThreadLocalVar(className, field.fieldName().stringValue(), field.fieldTypeSymbol(), tlAnnotationData.inheritable);
     }
 
 
+    // TODO replace the description
     private static class SLAnnotationData {
         /**
          * The default for the {@link SyntheticLocal#initialize} attribute.
-         * <p>
-         * <b>Note:</b> The {@link AnnotationNode} represents an enum as a
-         * two-value String array containing a type descriptor and the value.
-         * See {@link AnnotationNode#values} and the implementation of
-         * {@link AnnotationNode#visitEnum(String, String, String)} for details.
          */
         String [] initialize = {
-            Type.getDescriptor (Initialize.class), Initialize.ALWAYS.name ()
+            Initialize.class.descriptorString(), Initialize.ALWAYS.name ()
         };
     }
 
 
-    private SyntheticLocalVar parseSyntheticLocal (
-        final String className, final FieldNode field,
-        final AnnotationNode annotation
-    ) throws ParserException {
-        //
+    private SyntheticLocalVar parseSyntheticLocal(final String className, final FieldModel field, final Annotation annotation) throws ParserException {
         // Ensure that the synthetic local field is declared static, parse
         // annotation data and determine the initialization mode for the
         // variable.
-        //
-        if ((field.access & Opcodes.ACC_STATIC) == 0) {
-            throw new ParserException("Field " + field.name + className
+        if (!field.flags().has(AccessFlag.STATIC)) {
+            throw new ParserException("Field " + field.fieldName().stringValue() + className
                     + "." + " declared as SyntheticLocal but is not static");
         }
 
-        final SLAnnotationData slad = parseAnnotation (
-            annotation, new SLAnnotationData ()
-        );
+        final SLAnnotationData slAnnotationData = parseAnnotation(annotation, new SLAnnotationData());
 
-        final Initialize initMode = Initialize.valueOf (slad.initialize [1]);
+        final Initialize initMode = Initialize.valueOf(slAnnotationData.initialize[1]);
 
-        return new SyntheticLocalVar (
-            className, field.name, Type.getType (field.desc), initMode
-        );
+        return new SyntheticLocalVar(className, field.fieldName().stringValue(), field.fieldTypeSymbol(), initMode);
     }
 
 
@@ -216,11 +157,8 @@ abstract class AbstractParser {
     // Parses the initialization code for synthetic local variables. Such code
     // can only contain assignment from constants of basic types, or a single
     // method call.
-    //
-    private void parseInitCodeForSLV (
-        final InsnList initInsns, final Map <String, SyntheticLocalVar> slvs
-    ) {
-        //
+    private void parseInitCodeForSLV(final List<CodeElement> instructions,
+                                     final Map<String, SyntheticLocalVar> slvs) {
         // Mark the first instruction of a block of initialization code and scan
         // the code. Ignore any instructions that do not access fields and stop
         // scanning when encountering any RETURN instruction.
@@ -230,298 +168,261 @@ abstract class AbstractParser {
         // first and ending with the field access instruction. Then mark the
         // instruction following the field access as the first instruction of
         // the next initialization block.
-        //
-        AbstractInsnNode firstInitInsn = initInsns.getFirst ();
-        for (final AbstractInsnNode insn : Insns.selectAll (initInsns)) {
-            if (AsmHelper.isReturn (insn.getOpcode ())) {
+        CodeElement firstInstruction = instructions.getFirst();
+        for (final CodeElement instruction: instructions) {
+            if (instruction instanceof ReturnInstruction) {
                 break;
             }
 
-            //
             // Only consider instructions access fields. This will leave us only
             // with GETFIELD, PUTFIELD, GETSTATIC, and PUTSTATIC instructions.
             //
             // RFC LB: Could we only consider PUTSTATIC instructions?
-            //
-            if (insn instanceof FieldInsnNode) {
-                final FieldInsnNode lastInitInsn = (FieldInsnNode) insn;
+            if (instruction instanceof FieldInstruction) {
+                final FieldInstruction lastInstruction = (FieldInstruction) instruction;
 
-                //
                 // Skip accesses to fields that are not synthetic locals.
-                //
-                final SyntheticLocalVar slv = slvs.get (SyntheticLocalVar.fqFieldNameFor (
-                    lastInitInsn.owner, lastInitInsn.name
+                final SyntheticLocalVar slv = slvs.get(SyntheticLocalVar.fqFieldNameFor(
+                        lastInstruction.owner().name().stringValue(),
+                        lastInstruction.name().stringValue()
                 ));
                 if (slv == null) {
                     // RFC LB: Advance firstInitInsn here as well?
                     continue;
                 }
 
-                //
+                // TODO with the classfile should I  actually clone the code or simply select it???
                 // Clone the initialization code between the current first
                 // initialization instruction and this field access instruction,
                 // which marks the end of the initialization code.
-                //
                 if (slv.hasInitCode ()) {
                     __log.warn (
-                        "replacing initialization code "+
-                        "for synthetic local variable %s\n", slv.getID ()
+                            "replacing initialization code "+
+                                    "for synthetic local variable %s\n", slv.getID ()
                     );
                 }
-                slv.setInitCode (simpleInsnListClone (
-                    firstInitInsn, lastInitInsn
-                ));
+                slv.setInitCodeList(
+                        simpleCopy(firstInstruction, lastInstruction, instructions)
+                );
 
-                firstInitInsn = insn.getNext ();
+                firstInstruction = ClassFileHelper.nextInstruction(instructions, instruction);
             }
         }
     }
 
 
-    private InsnList simpleInsnListClone (
-        final AbstractInsnNode first, final AbstractInsnNode last
-    ) {
-        //
-        // Clone the instructions from "first" to "last", inclusive.
-        // Therefore at least one instruction will be always copied.
-        //
-        final InsnList result = new InsnList ();
-
-        final AbstractInsnNode end = last.getNext ();
-        final Map <LabelNode, LabelNode> dummy = Collections.emptyMap ();
-
-        for (AbstractInsnNode insn = first; insn != end; insn = insn.getNext ()) {
-            //
-            // Clone only real instructions, we should not need labels.
-            //
-            if (! Insn.isVirtual (insn)) {
-                result.add (insn.clone (dummy));
-            }
+    private List<CodeElement> simpleCopy(final CodeElement start, final CodeElement end,
+                                         final List<CodeElement> instructions) {
+        final int startIndex = instructions.indexOf(start);
+        final int endIndex = instructions.indexOf(end);
+        if (startIndex >= 0 && endIndex >= 0 && endIndex >= startIndex) {
+            return instructions.subList(startIndex, endIndex + 1);
         }
-
-        return result;
+        return new ArrayList<>(); // TODO should I throw an error?
     }
 
 
-    private void parseInitCodeForTLV (
-        final String className, final MethodNode cinitMethod,
-        final Map <String, ThreadLocalVar> tlvs
+    private void parseInitCodeForTLV(
+            final String className, final MethodModel initMethod,
+            final Map<String, ThreadLocalVar> tlvs
     ) throws ParserException {
-        final Frame <SourceValue> [] frames =
-            FrameHelper.getSourceFrames (className, cinitMethod);
+        // the method in question is the static initializer
 
-        // analyze instructions in each frame
-        // one frame should cover one field initialization
-        for (int i = 0; i < frames.length; i++) {
-            final AbstractInsnNode instr = cinitMethod.instructions.get (i);
+        // get the code from the method, only the instructions
+        final List<Instruction> code = initMethod.code().orElseThrow()
+                .elementList().stream().filter(i -> i instanceof Instruction)
+                .map(i -> (Instruction)i).toList();
 
-            // if the last instruction puts some value into the field...
-            if (instr.getOpcode() != Opcodes.PUTSTATIC) {
-                continue;
-            }
-
-            final FieldInsnNode fieldInsn = (FieldInsnNode) instr;
-
-            //
-            // Skip accesses to fields that are not thread locals.
-            //
-            final ThreadLocalVar tlv = tlvs.get (ThreadLocalVar.fqFieldNameFor (
-                className, fieldInsn.name
-            ));
-            if (tlv == null) {
-                continue;
-            }
-
-            // get the instruction that put the field value on the stack
-            final Set <AbstractInsnNode> sources =
-                frames [i].getStack (frames [i].getStackSize () - 1).insns;
-
-            if (sources.size () != 1) {
-                throw new ParserException(String.format (
-                    "Thread local variable %s can be only initialized "+
-                    "by a single constant", tlv.getName()
-                ));
-            }
-
-            final AbstractInsnNode source = sources.iterator().next();
-
-            // analyze opcode and set the proper default value
-            switch (source.getOpcode()) {
-            // not supported
-            // case Opcodes.ACONST_NULL:
-            // var.setDefaultValue(null);
-            // break;
-
-            case Opcodes.ICONST_M1:
-                tlv.setInitialValue(-1);
-                break;
-
-            case Opcodes.ICONST_0:
-
-                if (fieldInsn.desc.equals("Z")) {
-                    tlv.setInitialValue(false);
-                } else {
-                    tlv.setInitialValue(0);
+        for (int index=0; index < code.size(); index++) {// loop on all the instructions
+            final Instruction instruction = code.get(index);
+            if (instruction instanceof FieldInstruction storeInstruction) {
+                // only consider putstatic for initialization
+                if (storeInstruction.opcode() != Opcode.PUTSTATIC) {
+                    continue; // thread local variable must be static
                 }
 
-                break;
-
-            case Opcodes.ICONST_1:
-
-                if (fieldInsn.desc.equals("Z")) {
-                    tlv.setInitialValue(true);
-                } else {
-                    tlv.setInitialValue(1);
+                String tlvName = storeInstruction.name().stringValue();
+                if (!tlvs.containsKey(tlvName)) {
+                    continue;  // check that the variable is declared as thread local
                 }
 
-                break;
+                // list of instructions that will be added to the tlv
+                List<CodeElement> initializationInstructions = new ArrayList<>();
 
-            case Opcodes.ICONST_2:
-                tlv.setInitialValue(2);
-                break;
+                // get the instruction before the putstatic
+                final Instruction previousInstruction =  code.get(index -1);
 
-            case Opcodes.ICONST_3:
-                tlv.setInitialValue(3);
-                break;
+                if (previousInstruction == null) {
+                    throw new ParserException(String.format (
+                            "Thread local variable %s has no instruction before the putstatic", tlvName
+                    ));
+                }
+                switch (previousInstruction.opcode()) {
+                    case Opcode.INVOKESPECIAL -> {
+                        // if is a constructor get the code between INVOKESPECIAL and the NEW
+                        Instruction currentInstruction = previousInstruction;
+                        int currentIndex = index -1;
+                        int constructorTotal = 0; // if there are more constructor inside this constructor
+                        // we increment this variable, this if for case like:
+                        // // public static A tlv = new A(new B()));
 
-            case Opcodes.ICONST_4:
-                tlv.setInitialValue(4);
-                break;
-
-            case Opcodes.ICONST_5:
-                tlv.setInitialValue(5);
-                break;
-
-            case Opcodes.LCONST_0:
-                tlv.setInitialValue(0L);
-                break;
-
-            case Opcodes.LCONST_1:
-                tlv.setInitialValue(1L);
-                break;
-
-            case Opcodes.FCONST_0:
-                tlv.setInitialValue(0.0F);
-                break;
-
-            case Opcodes.FCONST_1:
-                tlv.setInitialValue(1.0F);
-                break;
-
-            case Opcodes.FCONST_2:
-                tlv.setInitialValue(2.0F);
-                break;
-
-            case Opcodes.DCONST_0:
-                tlv.setInitialValue(0.0D);
-                break;
-
-            case Opcodes.DCONST_1:
-                tlv.setInitialValue(1.0D);
-                break;
-
-            case Opcodes.BIPUSH:
-            case Opcodes.SIPUSH:
-                tlv.setInitialValue(((IntInsnNode) source).operand);
-                break;
-
-            case Opcodes.LDC:
-                tlv.setInitialValue(((LdcInsnNode) source).cst);
-                break;
-
-            default:
-                throw new ParserException("Initialization is not"
-                        + " defined for thread local variable " + tlv.getName());
+                        while (true) { //get all the code that is part of the constructor
+                            if (currentInstruction.opcode() == Opcode.NEW) {
+                                constructorTotal--;
+                            } else if (currentInstruction.opcode() == Opcode.INVOKESPECIAL) {
+                                constructorTotal++;
+                            }
+                            initializationInstructions.addFirst(currentInstruction);
+                            if (constructorTotal == 0) {
+                                break;
+                            }
+                            currentIndex--;
+                            if (currentIndex < 0) {
+                                break; // TODO should return an error instead???
+                            }
+                            currentInstruction = code.get(currentIndex);
+                        }
+                    }
+                    case Opcode.ICONST_0,
+                         Opcode.ICONST_1,
+                         Opcode.ICONST_2,
+                         Opcode.ICONST_3,
+                         Opcode.ICONST_4,
+                         Opcode.ICONST_5,
+                         Opcode.LCONST_0,
+                         Opcode.LCONST_1,
+                         Opcode.FCONST_0,
+                         Opcode.FCONST_1,
+                         Opcode.FCONST_2,
+                         Opcode.DCONST_0,
+                         Opcode.DCONST_1,
+                         Opcode.BIPUSH,
+                         Opcode.SIPUSH,
+                         Opcode.LDC -> // if is a constant we just need to copy 1 instruction, the ins that load the instruction on the stack
+                            initializationInstructions.add(previousInstruction);
+                    case Opcode.NEWARRAY,
+                         Opcode.ANEWARRAY-> {
+                        initializationInstructions.addFirst(previousInstruction);
+                        Instruction arraySize = code.get(index -2); // get instruction that push the size of the array on the stack
+                        // it needs to be an instruction that push an integer
+                        if (arraySize == null || !isIntegerConstant(arraySize.opcode())) {
+                            throw new ParserException(String.format (
+                                    "Thread local variable %s use invalid constant to set the size" +
+                                            " of the array. Eg: new int[10] is valid as 10 is a constant" +
+                                            ". while: new int[myFunction()] is not! ", tlvName
+                            ));
+                        }
+                        initializationInstructions.addFirst(arraySize);
+                    }
+                    case Opcode.MULTIANEWARRAY -> {
+                        NewMultiArrayInstruction newMultiArrayInstruction = (NewMultiArrayInstruction) previousInstruction;
+                        initializationInstructions.addFirst(newMultiArrayInstruction);
+                        final int dimensions = newMultiArrayInstruction.dimensions();
+                        for (int offset = 1; offset <= dimensions; offset++) {
+                            Instruction arraySize = code.get(index -1 -offset);
+                            // all instructions need to be integer push
+                            if (arraySize == null || !isIntegerConstant(arraySize.opcode())) {
+                                throw new ParserException(String.format (
+                                        "Thread local variable %s use invalid constant to set the size" +
+                                                " of the array. Eg: new int[10][5] is valid as 10 and 5 are constant" +
+                                                ". while: new int[10][myFunction()] is not! ", tlvName
+                                ));
+                            }
+                            initializationInstructions.addFirst(arraySize);
+                        }
+                    }
+                    default -> throw new ParserException(String.format (
+                            "Thread local variable %s use an invalid initializer. " +
+                                    "Only constants, constructors or array constructors" +
+                                    " are valid. E.G. static int tlv = 5; " +
+                                    "static Object tlv = new Object() ; " +
+                                    "static int[] tlv = new int[15]; " +
+                                    "and similar.", tlvName
+                    ));
+                }
+                // finally set the tlv initialization instructions
+                tlvs.get(ThreadLocalVar.fqFieldNameFor(className, tlvName)).setInitializerInstructions(initializationInstructions);
             }
         }
     }
 
-    //
 
-    static void ensureMethodReturnsVoid (
-        final MethodNode method
-    ) throws ParserException {
-        final Type returnType = Type.getReturnType (method.desc);
-        if (! Type.VOID_TYPE.equals (returnType)) {
+    public static boolean isIntegerConstant(Opcode opcode) {
+        switch (opcode) {
+            case    Opcode.ICONST_0,
+                    Opcode.ICONST_1,
+                    Opcode.ICONST_2,
+                    Opcode.ICONST_3,
+                    Opcode.ICONST_4,
+                    Opcode.ICONST_5,
+                    Opcode.BIPUSH,
+                    Opcode.LDC -> {
+                return true;
+            }
+            default -> {
+                return false;
+            }
+        }
+    }
+
+
+    static void ensureMethodReturnsVoid(final MethodModel method) throws ParserException {
+        ClassDesc returnType = method.methodTypeSymbol().returnType();
+        if (!returnType.descriptorString().equals(void.class.descriptorString())) {
             throw new ParserException ("method may not return any value!");
         }
     }
 
 
-    static void ensureMethodIsStatic (
-        final MethodNode method
-    ) throws ParserException {
-        if ((method.access & Opcodes.ACC_STATIC) == 0) {
+    static void ensureMethodIsStatic(final MethodModel method) throws ParserException {
+        if (!method.flags().has(AccessFlag.STATIC)) {
             throw new ParserException ("method must be declared static!");
         }
     }
 
 
-    static void ensureMethodUsesContextProperly (
-        final MethodNode method
-    ) throws ParserException {
-        //
-        // Check accesses to method parameters to ensure that the context
-        // is not overwritten or stored to a local variable.
-        //
-        // WARNING: The following code assumes that DiSL snippets are
-        // static methods, and therefore do not have the "this" parameter.
-        // This should have been ensured by the ensureMethodIsStatic() method.
-        //
-        final int firstLocalSlot = AsmHelper.getParameterSlotCount (method);
-        for (final AbstractInsnNode insn : Insns.selectAll (method.instructions)) {
-            if (Insn.ASTORE.matches (insn)) {
-                //
-                // Make sure that nothing is stored into a context argument.
-                //
-                final int storeSlot = ((VarInsnNode) insn).var;
-                if (storeSlot < firstLocalSlot) {
-                    throw new ParserException (String.format (
-                        "context parameter stored into%s!",
-                        AsmHelper.formatLineNo (" (at line %d)", insn)
-                    ));
-                }
-
-            } else if (Insn.ALOAD.matches (insn)) {
-                //
-                // Make sure that the context argument is not loaded and
-                // immediately stored (in the next instruction) into a local
-                // variable. This is just a sanity check -- we would need escape
-                // analysis to handle this properly (i.e. to avoid passing
-                // context to some method).
-                //
-                final int loadSlot = ((VarInsnNode) insn).var;
-                if (loadSlot < firstLocalSlot) {
-                    final AbstractInsnNode nextInsn = Insns.FORWARD.nextRealInsn (insn);
-                    if (Insn.ASTORE.matches (nextInsn)) {
+    static void ensureMethodUsesContextProperly(MethodModel method) throws ParserException {
+        final int firstLocalSlot = ClassFileHelper.getParameterSlotCount(method);
+        if (method.code().isPresent()) {
+            final List<CodeElement> allCode = method.code().get().elementList();
+            for (CodeElement instruction: allCode) {
+                if (instruction instanceof StoreInstruction && ((StoreInstruction) instruction).opcode() == Opcode.ASTORE) {
+                    final int storeSlot = ((StoreInstruction) instruction).slot();
+                    if (storeSlot < firstLocalSlot) {
                         throw new ParserException (String.format (
-                            "context parameter stored into a local variable%s!",
-                            AsmHelper.formatLineNo (" (at line %d)", nextInsn)
+                                "context parameter stored into%s!",
+                                ClassFileHelper.formatLineNo(" (at line %d)", instruction, allCode)
                         ));
+                    }
+                } else if (instruction instanceof LoadInstruction && ((LoadInstruction) instruction).opcode() == Opcode.ALOAD) {
+                    final int loadSlot = ((LoadInstruction) instruction).slot();
+                    if (loadSlot < firstLocalSlot) {
+                        final CodeElement nextInstruction = ClassFileHelper.nextRealInstruction(allCode, instruction);
+                        if (nextInstruction instanceof StoreInstruction && ((StoreInstruction) nextInstruction).opcode() == Opcode.ASTORE) {
+                            throw new ParserException (String.format (
+                                    "context parameter stored into a local variable%s!",
+                                    ClassFileHelper.formatLineNo(" (at line %d)", nextInstruction, allCode)
+                            ));
+                        }
                     }
                 }
             }
-        } // for
-
+        }
     }
 
 
-    static void ensureMethodHasOnlyContextArguments (
-        final MethodNode method
-    ) throws ParserException {
-        //
+    static void ensureMethodHasOnlyContextArguments(final MethodModel method) throws ParserException {
         // The type of each method argument must be a context of some kind.
-        //
-        final Type [] argTypes = Type.getArgumentTypes (method.desc);
-        for (int argIndex = 0; argIndex < argTypes.length; argIndex++) {
-            final Type argType = argTypes [argIndex];
+        List<ClassDesc> argTypes = method.methodTypeSymbol().parameterList();
+        for (int argIndex = 0; argIndex < argTypes.size(); argIndex++) {
+            final ClassDesc argType = argTypes.get(argIndex);
 
-            final ContextKind contextType = ContextKind.forType (argType);
-            if (contextType == null) {
+            final ContextKind contextKind = ContextKind.forType(argType);
+            if (contextKind == null) {
                 throw new ParserException (
-                    "argument #%d has invalid type, %s does not "+
-                    "implement any context interface!",
-                    (argIndex + 1), argType.getClassName ()
+                        "argument #%d has invalid type, %s does not "+
+                                "implement any context interface!",
+                        (argIndex + 1), argType.displayName()
                 );
             }
         }
@@ -535,22 +436,20 @@ abstract class AbstractParser {
      * @param method the method to check
      * @throws ParserException if the method is empty
      */
-    static void ensureMethodIsNotEmpty (
-        final MethodNode method
-    ) throws ParserException {
-        final AbstractInsnNode head = method.instructions.getFirst ();
-        final AbstractInsnNode firstInsn = Insns.FORWARD.firstRealInsn (head);
-        if (AsmHelper.isReturn (firstInsn)) {
+    static void ensureMethodIsNotEmpty(final MethodModel method) throws ParserException {
+        if (method.code().isEmpty() ||
+                ClassFileHelper.isReturn(ClassFileHelper.selectReal(method.code().get().elementList()).get(0))) {
             throw new ParserException ("method does not contain any code!");
         }
     }
 
 
-    static void ensureMethodThrowsNoExceptions (
-        final MethodNode method
-    ) throws ParserException {
-        if (! method.exceptions.isEmpty ()) {
-            throw new ParserException ("method may not throw any exceptions!");
+    static void ensureMethodThrowsNoExceptions(final MethodModel method) throws ParserException {
+        if(method.code().isPresent()) {
+            List<ExceptionCatch> exceptionCatches = method.code().get().exceptionHandlers();
+            if (!exceptionCatches.isEmpty()) {
+                throw new ParserException ("method may not throw any exceptions!");
+            }
         }
     }
 
@@ -566,37 +465,63 @@ abstract class AbstractParser {
      *        the result object in which to modify field values
      * @return the modified result object
      */
-    static <T> T parseAnnotation (
-        final AnnotationNode annotation, final T result
-    ) {
-        // nothing to do
-        if (annotation.values == null) {
+    static <T> T parseAnnotation(final Annotation annotation, final T result) {
+        if (annotation.elements().isEmpty()) {
             return result;
         }
-
         try {
-            final Iterator <?> it = annotation.values.iterator ();
-            while (it.hasNext ()) {
-                //
-                // Name-value pairs are stored as two consecutive elements.
-                // Set the value of the field with the corresponding name.
-                //
-                final String name = (String) it.next ();
-                final Object value = it.next ();
+            for (AnnotationElement element: annotation.elements()) {
 
-                __setFieldValue (name, value, result);
+                    String name = element.name().stringValue();
+                    Object value = getAnnotationValue(element.value());
+
+                    __setFieldValue(name, value, result);
             }
-
             return result;
-
         } catch (final Exception e) {
             throw new InitializationException (
-                e, "failed to parse the %s annotation",
-                Type.getType (annotation.desc).getClassName ()
+                    e, "failed to parse the %s annotation",
+                    annotation.classSymbol().displayName()
             );
         }
     }
 
+    // TODO is this correct ????
+    private static Object getAnnotationValue(AnnotationValue annotationValue) {
+        switch (annotationValue) {
+            case AnnotationValue.OfBoolean ofBoolean -> {
+                return ofBoolean.booleanValue();
+            }
+            case AnnotationValue.OfByte ofByte -> {
+                return ofByte.byteValue();
+            }
+            case AnnotationValue.OfCharacter ofCharacter -> {
+                return ofCharacter.charValue();
+            }
+            case AnnotationValue.OfShort ofShort -> {
+                return ofShort.shortValue();
+            }
+            case AnnotationValue.OfInteger ofInteger -> {
+                return ofInteger.intValue();
+            }
+            case AnnotationValue.OfLong ofLong -> {
+                return ofLong.longValue();
+            }
+            case AnnotationValue.OfFloat ofFloat -> {
+                return ofFloat.floatValue();
+            }
+            case AnnotationValue.OfDouble ofDouble -> {
+                return ofDouble.doubleValue();
+            }
+            case AnnotationValue.OfString ofString -> {
+                return ofString.stringValue();
+            }
+            // TODO what to do with other case like OfClass, OfArray, OfEnum ?????
+            default -> {
+                return null;
+            }
+        }
+    }
 
     private static <T> void __setFieldValue (
         final String name, final Object value, final T target
@@ -612,13 +537,11 @@ abstract class AbstractParser {
     }
 
 
-    static Class <?> getGuard (final Type guardType)
-    throws ReflectionException {
+    static Class<?> getGuard(final ClassDesc guardType) throws ReflectionException {
         if (guardType == null) {
             return null;
         }
-
-        return ReflectionHelper.resolveClass (guardType);
+        return ReflectionHelper.resolveClass(guardType);
     }
 
 }
